[package]
name = "tauri-transparency-demo"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "*"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
windows = "0.56.0"

[patch.crates-io]
wry = { git = "https://github.com/bgschiller/wry.git", branch = "avoid-resigning-key" }
tao = { git = "https://github.com/bgschiller/tao.git", branch = "track-resigning-key" }
